--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -240,7 +240,6 @@
     <ClCompile Include="PixelShader.cpp" />
     <ClCompile Include="RTT.cpp" />
     <ClCompile Include="Sampler.cpp" />
-    <ClCompile Include="Shadow.cpp" />
     <ClCompile Include="ShapesScene.cpp" />
     <ClCompile Include="SkyRender.cpp" />
     <ClCompile Include="SolidSphere.cpp" />
@@ -304,7 +303,6 @@
     <ClInclude Include="MathHelper.h" />
     <ClInclude Include="GameTimer.h" />
     <ClInclude Include="RTT.h" />
-    <ClInclude Include="Shadow.h" />
     <ClInclude Include="ShapesScene.h" />
     <ClInclude Include="SkyRender.h" />
     <ClInclude Include="Step.h" />
@@ -388,10 +386,10 @@
     <None Include="Shader\BRDF.hlsli" />
     <None Include="Shader\CommonCbuf.hlsli" />
     <None Include="Shader\LightingCommon.hlsli" />
+    <None Include="Shader\LightingUtil.hlsli" />
     <None Include="Shader\PaniniProjection.hlsli" />
     <None Include="Shader\Phong.hlsli" />
     <None Include="Shader\ShaderOptions.hlsli" />
-    <None Include="Shader\LightingUtil.hlsli" />
     <None Include="Shader\ShadingMath.hlsli" />
   </ItemGroup>
   <ItemGroup>
@@ -415,7 +413,7 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
-    <FxCompile Include="Shader\OrthoDepthDraw_PS.hlsl">
+    <FxCompile Include="Shader\DepthDraw_PS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
@@ -425,7 +423,7 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
-    <FxCompile Include="Shader\OrthoDepth_PS.hlsl">
+    <FxCompile Include="Shader\Depth_PS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
@@ -435,7 +433,7 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
-    <FxCompile Include="Shader\OrthoDepth_VS.hlsl">
+    <FxCompile Include="Shader\Depth_VS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
