--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -134,7 +134,7 @@ Size=276,158
 Collapsed=0
 
 [Window][Game State]
-Pos=-2,23
+Pos=117,23
 Size=340,166
 Collapsed=0
 
@@ -201,5 +201,10 @@ Collapsed=0
 [Window][cube]
 Pos=1410,456
 Size=145,329
+Collapsed=0
+
+[Window][role]
+Pos=60,60
+Size=481,151
 Collapsed=0
 
