--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -24,7 +24,7 @@ Size=246,222
 Collapsed=1
 
 [Window][Light]
-Pos=-5,188
+Pos=-7,183
 Size=290,90
 Collapsed=0
 
@@ -119,9 +119,9 @@ Size=417,263
 Collapsed=1
 
 [Window][Sponza]
-Pos=1283,555
-Size=278,222
-Collapsed=0
+Pos=1268,49
+Size=388,284
+Collapsed=1
 
 [Window][Cpu]
 Pos=60,60
@@ -174,13 +174,13 @@ Size=233,347
 Collapsed=0
 
 [Window][SpotLight1]
-Pos=12,318
-Size=325,543
+Pos=5,320
+Size=236,486
 Collapsed=0
 
 [Window][PointLight1]
-Pos=38,307
-Size=174,314
+Pos=3,289
+Size=212,435
 Collapsed=0
 
 [Window][DirectionLight1]
@@ -210,6 +210,11 @@ Collapsed=0
 
 [Window][PointLight3]
 Pos=26,280
-Size=110,358
+Size=172,409
+Collapsed=0
+
+[Window][PointLight4]
+Pos=4,279
+Size=208,402
 Collapsed=0
 
