--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,7 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+!Data/Models/*.obj
+!Data/Models/*/*.obj
+!Data/Models/*/*/*.obj
