--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -24,7 +24,7 @@ Size=246,222
 Collapsed=1
 
 [Window][Light]
-Pos=-12,184
+Pos=353,19
 Size=290,90
 Collapsed=0
 
@@ -199,7 +199,7 @@ Size=234,510
 Collapsed=0
 
 [Window][cube]
-Pos=1379,395
+Pos=1202,389
 Size=169,367
 Collapsed=0
 
@@ -216,5 +216,15 @@ Collapsed=0
 [Window][PointLight4]
 Pos=4,279
 Size=208,402
+Collapsed=0
+
+[Window][Cube 1]
+Pos=9,202
+Size=131,480
+Collapsed=0
+
+[Window][Cube 2]
+Pos=146,208
+Size=131,480
 Collapsed=0
 
